--- a/WpfApp_ADO_NET_CodeFirst/MainWindow.xaml
+++ b/WpfApp_ADO_NET_CodeFirst/MainWindow.xaml
@@ -28,15 +28,15 @@
             </MenuItem>
 
             <MenuItem Header="LinqToSQL ManufacturerAirplane">
-                <MenuItem Header="AuthorsTitles" Click="MenuItem_Click_3" />
-                <MenuItem Header="PublishersAuthors" Click="MenuItem_Click_4" />
-                <MenuItem Header="TitlesSales" Click="MenuItem_Click_5" />
+                <MenuItem Header="AirplaineWithSpeedLess 600" Click="MenuItem_Click_3" />
+                <MenuItem Header="ManufacturerWithAirplaneMore 3 airplane" Click="MenuItem_Click_4" />
+                <MenuItem Header="ManufacturerNameWithLengthLess 7 symbols " Click="MenuItem_Click_5" />
             </MenuItem>
 
             <MenuItem Header="StoredFunction ManufacturerAirplane">
-                <MenuItem Header="AuthorsTitlesByType (business)" Click="MenuItem_Click"  />
-                <MenuItem Header="PublishersAuthorsByType (business)" Click="MenuItem_Click_1"  />
-                <MenuItem Header="TitlesSalesByStore (Bookbeat)" Click="MenuItem_Click_2" />
+                <MenuItem Header="GetAirplaineWithSpeedLess (600)" Click="MenuItem_Click"  />
+                <MenuItem Header="GetManufacturerWithAirplaneMore (3)" Click="MenuItem_Click_1"  />
+                <MenuItem Header="GetManufacturerNameWithLengthLess (7)" Click="MenuItem_Click_2" />
             </MenuItem>
         </Menu>
         <Menu Height="22" Name="menuProjectsEmployees" Width="Auto" DockPanel.Dock="Top" Margin="3">
@@ -54,15 +54,15 @@
             </MenuItem>
 
             <MenuItem Header="LinqToSQL ProjectsEmployees">
-                <MenuItem Header="AuthorsTitles" Click="MenuItem_Click_13" />
-                <MenuItem Header="PublishersAuthors" Click="MenuItem_Click_14" />
-                <MenuItem Header="TitlesSales" Click="MenuItem_Click_15" />
+                <MenuItem Header="ProjectWithMaxEmployees" Click="MenuItem_Click_13" />
+                <MenuItem Header="EmployeerWithAgeLess 35" Click="MenuItem_Click_14" />
+                <MenuItem Header="EmployeerWithLastNameLengthMoreOrEqual 5" Click="MenuItem_Click_15" />
             </MenuItem>
 
             <MenuItem Header="StoredFunction ProjectsEmployees">
-                <MenuItem Header="AuthorsTitlesByType (business)" Click="MenuItem_Click2"  />
-                <MenuItem Header="PublishersAuthorsByType (business)" Click="MenuItem_Click_11"  />
-                <MenuItem Header="TitlesSalesByStore (Bookbeat)" Click="MenuItem_Click_12" />
+                <MenuItem Header="GetProjectWithMaxEmployees" Click="MenuItem_Click2"  />
+                <MenuItem Header="GetEmployeerWithAgeLess (35)" Click="MenuItem_Click_11"  />
+                <MenuItem Header="GetEmployeerWithLastNameLengthMoreOrEqual (5)" Click="MenuItem_Click_12" />
             </MenuItem>
         </Menu>
 
