--- a/WpfApp_ADO_NET_CodeFirst/MainWindow.xaml
+++ b/WpfApp_ADO_NET_CodeFirst/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp_ADO_NET_CodeFirst"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Ekzam C# WPF ADO.NET - CodeFirst - Pavlo Khyzhniak 17.10.2020" Height="450" Width="800">
     
     <Window.Resources>
 
