--- a/WpfApp_ADO_NET_SQLDataAdapter/App.xaml
+++ b/WpfApp_ADO_NET_SQLDataAdapter/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp_ADO_NET_SQLDataAdapter"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow_SQLDataAdapter.xaml">
     <Application.Resources>
 
         <ResourceDictionary>
