Fix IsReadOnly For mainDataGrid we are use Window_Change for Edit Mode

--- a/WpfApp_ADO_NET_SQLDataAdapter_TypedDataSet/Styles/DataGrid_ProjectsEmployees.xaml
+++ b/WpfApp_ADO_NET_SQLDataAdapter_TypedDataSet/Styles/DataGrid_ProjectsEmployees.xaml
@@ -46,7 +46,7 @@
 
                         <DataGrid.Columns>
                             <DataGridTextColumn IsReadOnly="True" Header="Id" Binding="{Binding Path=ProjectId}"/>
-                            <DataGridTextColumn Header="Title" Binding="{Binding Path=Title, UpdateSourceTrigger=PropertyChanged}" Width="Auto" />
+                            <DataGridTextColumn IsReadOnly="True" Header="Title" Binding="{Binding Path=Title, UpdateSourceTrigger=PropertyChanged}" Width="Auto" />
 
                             <DataGridTextColumn IsReadOnly="True" Header="Employees" Binding="{Binding Employees,Converter={StaticResource ConverterEmployeesToString}, UpdateSourceTrigger=PropertyChanged}" Width="Auto" />
 
@@ -65,9 +65,9 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>-->
 
-                            <DataGridTextColumn Header="Start Date" Binding="{Binding Path=StartDate,StringFormat=\{0:yyyy-MM-dd HH:mm:ss.fff\}, UpdateSourceTrigger=PropertyChanged}" Width="150" />
-                            <DataGridTextColumn Header="End Date" Binding="{Binding Path=EndDate,StringFormat=\{0:yyyy-MM-dd HH:mm:ss.fff\}, UpdateSourceTrigger=PropertyChanged}" Width="150" />
-                            <DataGridTextColumn Header="Description" Binding="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" Width="150" />
+                            <DataGridTextColumn IsReadOnly="True" Header="Start Date" Binding="{Binding Path=StartDate,StringFormat=\{0:yyyy-MM-dd HH:mm:ss.fff\}, UpdateSourceTrigger=PropertyChanged}" Width="150" />
+                            <DataGridTextColumn IsReadOnly="True" Header="End Date" Binding="{Binding Path=EndDate,StringFormat=\{0:yyyy-MM-dd HH:mm:ss.fff\}, UpdateSourceTrigger=PropertyChanged}" Width="150" />
+                            <DataGridTextColumn IsReadOnly="True" Header="Description" Binding="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" Width="150" />
                             
                             
                             <!--<DataGridComboBoxColumn x:Name="StateColumn" Header="Штат" SelectedItemBinding="{Binding Path=State, UpdateSourceTrigger=PropertyChanged}">
